[package]
name = "robius-url-handler"
version = "0.1.0"
edition = "2021"
authors = [
    "Klim Tsoutsman <klim@tsoutsman.com>",
    "Kevin Boos <kevinaboos@gmail.com>",
    "Project Robius Maintainers",
]
description = "Rust abstractions for registering application URL handlers"
documentation = "https://docs.rs/robius-url-handler"
homepage = "https://robius.rs/"
keywords = ["uri", "deep-link", "intent"]
categories = ["os", "api-bindings"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/project-robius/robius-url-handler"

[dependencies]
cfg-if = "1.0.0"

[target.'cfg(target_os = "macos")'.dependencies.objc2]
version = "0.5.2"
default-features = false

[target.'cfg(target_os = "macos")'.dependencies.objc2-foundation]
version = "0.2.2"
features = [
    # We currently roll our own version of the following structs because they don't have all the required functionality.
    # See the comment in sys::macos::objc2 for more details.
    # "NSAppleEventManager",
    # "NSAppleEventDescriptor",
    "NSString",
    "NSURL",
]

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.57.0"
features = [
    "ApplicationModel_Activation",
    "ApplicationModel_Core",
]
